tests/core/snapshots/simple-query.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  firstUser: User
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
