tests/core/snapshots/test-add-field-error.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "@addField",
      "street"
    ],
    "description": "Path [user, address, street] does not exist"
  }
]
