tests/core/snapshots/test-add-field-list.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type A {
  b: B
}

type B {
  c: String
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

type Foo {
  a: A
}

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  b: B
  foo: [Foo]
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
