tests/core/snapshots/test-add-field-list.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type A {
  b: B
}

type B {
  c: String
}

type Foo {
  a: A
}

type Query @addField(name: "b", path: ["foo", "a", "0", "b"]) {
  foo: [Foo] @http(url: "http://jsonplaceholder.typicode.com/foo")
}
