tests/core/snapshots/test-add-field.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type A {
  b: B
}

type B {
  c: String
}

type Foo {
  a: A
}

type Query {
  b: B
  foo: Foo
}

schema {
  query: Query
}
