tests/core/snapshots/test-alias-on-enum.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "color": {
        "departments": [
          "ENGINEERING",
          "MARKETING",
          "HR"
        ]
      }
    }
  }
}
