tests/core/snapshots/test-alias-on-enum.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

type DTA {
  departments: [Department]
}

scalar Date

scalar DateTime

enum Department {
  ENGINEERING
  HUMAN_RESOURCE
  MARKETING
}

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

scalar PhoneNumber

type Query {
  color: DTA
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
